-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
-
0e656164e (dev), 9bd375202 (6.8), 43307cb3f (6.7)
Nevertheless, the submenus appear overlapping the main menu and it is a behaviour that they've only noticed on iOS.
For Gerrit Dashboard: QTBUG-126052 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
566110,3 | iOS: Compute window level when needed instead of up front in member var | dev | qt/qtbase | Status: MERGED | +2 | 0 |
567078,2 | iOS: Compute window level when needed instead of up front in member var | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
567084,2 | iOS: Compute window level when needed instead of up front in member var | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |